--- a/css/app.css
+++ b/css/app.css
@@ -34,17 +34,33 @@ hr.small{
 	max-width: 100px;
 	margin: 15px auto;
 	border-width: 4px;
-	border-color: #fff;
+	#border-color: #fff;
 }
 
 .section-1{
 	background-color: #000;
+	padding: 20px 0;
 }
 
+.section-1 img{
+	max-height: 50px;
+}
+
+.section-1 h3{
+	color: #fff;
+	text-transform: uppercase;
+}
+
+.section-software{
+	padding: 30px 10px;
+}
+
+.section-software img{
+	max-height: 200px;
+}
+
+.section-adverts{
+	
+}
 
 /************* Responsive *****************/
-@media only screen and (max-width: 320px) {
-    header img{ 
-        background-color: rgba(0, 0, 0, 0.9);
-    }
-}
