--- a/css/app.css
+++ b/css/app.css
@@ -38,9 +38,9 @@ hr.small{
 }
 
 section{
-	border-bottom: 3px dashed green;
-	padding: 100px 0;
-	font-size: 20px;
+	#border-bottom: 3px dashed green;
+	#padding: 100px 0;
+	font-size: 16px;
 }
 
 section h2{
@@ -67,8 +67,16 @@ section h2{
 }
 
 .section-software img{
-	padding-top: 50px;
-	max-height: 300px;
+	padding: 150px 0;
+	max-height: 600px;
+}
+
+.section-software .text-sw{
+	margin: 100px 0;
+}
+
+.section-software .text-sw p{
+	padding: 0 30px;
 }
 
 .section-payments{
@@ -76,7 +84,16 @@ section h2{
 }
 
 .section-payments img{
-	padding-top: 100px;
+	padding: 170px 0;
+	min-height: 300px;
+}
+
+.section-payments .text-payments{
+	margin-top: 80px;
+}
+
+.section-payments .text-payments p{
+	padding: 0 30px;
 }
 
 .section-adverts{
@@ -84,7 +101,16 @@ section h2{
 }
 
 .section-adverts img{
-	max-height: 300px;
+	max-height: 500px;
+	padding: 30px 0;
+}
+
+.section-adverts .text-adverts{
+	margin-top: 70px;
+}
+
+.section-adverts .text-adverts p{
+	padding: 0 30px;
 }
 
 .grid-bg{
@@ -106,6 +132,74 @@ section h2{
 
 footer{
 	padding: 20px 0;
+	background-image: url(../images/footer_lodyas.png);
+	color: #fff;
+}
+
+footer a{
+	color: #fff;
+}
+
+footer p{
+	font-weight: bolder;
+	font-size: 1.2em;
+}
+
+footer ul {
+	overflow: auto;
+}
+ 
+footer ul li {
+	list-style-type: none;
+	display: inline-block;
+	padding-left: 0;
+	#float: left;
+}
+ 
+footer ul li a i {
+	background: #205D7A;
+	color: #fff;
+	width: 40px;
+	height: 40px;
+	border-radius: 20px;
+	font-size: 25px;
+	text-align: center;
+	margin-right: 10px;
+	padding-top: 15%;
+}
+
+.fa-facebook {
+	background:#3b5998
+} 
+.fa-linkedin {
+	background:#007bb6
+}
+.fa-twitter {
+	background:#00aced
+}
+.fa-google-plus {
+	background:#dd4b39
+}
+ 
+ul li a i {
+	transition: all 0.2s ease-in-out;
+}
+ul li a i:hover {
+	opacity: .7;
+}
+
+.thin-font{
+	#font-family: 'Source Sans Pro', sans-serif;
+	#font-family: 'Nixie One', cursive;
+	font-family: 'Raleway', sans-serif;
+}
+
+.os-font{
+	font-family: 'Open Sans', sans-serif;
+}
+
+.white-font{
+	color: #fff;
 }
 
 /************* Responsive *****************/
