--- a/css/app.css
+++ b/css/app.css
@@ -49,7 +49,7 @@ section h2{
 
 .section-1{
 	background-color: #000;
-	#padding: 20px 0;
+	padding: 10px 0;
 }
 
 .section-1 img{
@@ -162,7 +162,7 @@ footer ul li a i {
 	width: 40px;
 	height: 40px;
 	border-radius: 20px;
-	font-size: 25px;
+	font-size: 1.4em;
 	text-align: center;
 	margin-right: 10px;
 	padding-top: 15%;
@@ -202,4 +202,57 @@ ul li a i:hover {
 	color: #fff;
 }
 
-/************* Responsive *****************/
+/************* Responsive Utilities *****************/
+
+@media only screen and (max-width : 1150px) {
+	header{
+		height: 500px;
+	}
+}
+
+@media only screen and (max-width : 950px) {
+	header{
+		height: 450px;
+	}
+
+	.section-software img{
+		display: none;
+	}
+
+	.section-payments img{
+		display: none;
+	}
+
+	.section-adverts img{
+		display: none;
+	}
+
+
+}
+
+@media only screen and (max-width: 800px){
+	header{
+		height: 350px;
+	}
+}
+
+@media only screen and (max-width: 650px){
+	header{
+		height: 250px;
+	}
+}
+
+@media only screen and (max-width: 500px){
+	header{
+		height: 200px;
+	}
+}
+
+@media only screen and (max-width: 500px){
+	header{
+		height: 150px;
+	}
+}
+
+
+
