--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,8 @@
-body{
+/*body{
 	margin-top: 50px;
-}
+}*/
 
+/*
 header{
 	height: 600px;
 	#width: 100%;
@@ -29,6 +30,15 @@ header .grid-bg{
 	background-image: url(../images/grid.png);
 	z-index: 5000;
 }
+*/
+
+header{
+	background-color: #000;
+}
+
+header img{
+	margin: 50px 0;
+}
 
 hr.small{
 	max-width: 100px;
@@ -50,6 +60,15 @@ section h2{
 .section-1{
 	background-color: #000;
 	padding: 10px 0;
+}
+
+.section-1 h5{
+	margin: 30px 0;
+	color: #292929;
+}
+
+.section-1 a:hover{
+	#border-bottom: 3px solid blue;
 }
 
 .section-1 img{
@@ -93,8 +112,8 @@ section h2{
 }
 
 .section-payments img{
-	padding: 170px 0;
-	min-height: 300px;
+	padding: 80px 0;
+	height: 400px;
 }
 
 .section-payments .text-payments{
@@ -123,7 +142,7 @@ section h2{
 }
 
 .section-data-mining{
-	background-color: #bae7e5;
+	background-color: #cfefed;
 }
 
 .section-data-mining img{
@@ -150,6 +169,10 @@ section h2{
 
 .section-clients h2{
 	margin: 40px 0;
+}
+
+.section-clients img{
+	margin: 25px auto;
 }
 
 .navbar-black{
@@ -215,8 +238,6 @@ ul li a i:hover {
 }
 
 .thin-font{
-	#font-family: 'Source Sans Pro', sans-serif;
-	#font-family: 'Nixie One', cursive;
 	font-family: 'Raleway', sans-serif;
 }
 
@@ -230,7 +251,7 @@ ul li a i:hover {
 
 /************* Responsive Utilities *****************/
 
-@media only screen and (max-width : 1150px) {
+/*@media only screen and (max-width : 1150px) {
 	header{
 		height: 500px;
 	}
@@ -254,9 +275,9 @@ ul li a i:hover {
 	}
 
 
-}
+}*/
 
-@media only screen and (max-width: 800px){
+/*@media only screen and (max-width: 800px){
 	header{
 		height: 350px;
 	}
@@ -278,7 +299,7 @@ ul li a i:hover {
 	header{
 		height: 150px;
 	}
-}
+}*/
 
 
 
