--- a/css/app.css
+++ b/css/app.css
@@ -33,8 +33,7 @@ header .grid-bg{
 */
 
 header{
-	#background-color: #000;
-	background-color: #BDF89C;
+	background-color: #000;
 }
 
 header img{
@@ -59,8 +58,7 @@ section h2{
 }
 
 .section-1{
-	#background-color: #000;
-	background-color: #BDF89C;
+	background-color: #000;
 	padding: 10px 0;
 }
 
